Ajout d'un effet de relief au survol des cards/Correction dimension du header sur la page About en version mobile

--- a/kasa-app/src/components/Banner/Banner.module.scss
+++ b/kasa-app/src/components/Banner/Banner.module.scss
@@ -47,7 +47,7 @@
 @media screen and (max-width: 767px) {
   .bannerContainer {
     margin: 15px 0 35px 0;
-    height: 223px;
+    height: 111px;
   }
 
   .text {
