--- a/kasa-app/src/components/Cards/cards.module.scss
+++ b/kasa-app/src/components/Cards/cards.module.scss
@@ -13,13 +13,18 @@
 .card {
   width: 100%;
   height: 300px;
+  cursor: pointer;
   border: 1px solid #ccc;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   position: relative;
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 0) 0%,
     rgba(0, 0, 0, 0.5) 100%
   );
+  &:hover {
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  }
 }
 
 .cardTitle {
@@ -27,7 +32,7 @@
   font-weight: normal;
   position: absolute;
   bottom: 5px;
-  left: 20px;
+  left: 10px;
   color: $text-color;
 }
 
